Add total redesign v1.2

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Profile</title>
+    <title>BrainForge</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="../css/profile.css" rel="stylesheet" type="text/css">
 </head>
@@ -23,7 +23,6 @@
     </div>
 </section>
 <main class="main_section">
-
     <section class="profile_section">
         <div class="profile_card">
             <div class="profile_photo">
@@ -160,7 +159,6 @@
                 </form>
             </div>
         </div>
-
     </section>
 </main>
 <div class="modal" id="modal4">
@@ -173,7 +171,6 @@
                 grow professionally, and work on real projects.
             </h3>
         </div>
-
         <div class="modal4-right">
             <a href="mailto:brainforge.team@gmail.com
   ?subject=Job Application
