--- a/pages/chat_bot.html
+++ b/pages/chat_bot.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AI chat</title>
+  <title>BrainForge</title>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="../css/chat_bot.css" rel="stylesheet" type="text/css">
 </head>
