--- a/pages/focus.html
+++ b/pages/focus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Focus</title>
+    <title>BrainForge</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="../css/focus.css" rel="stylesheet" type="text/css">
 </head>
