--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main menu</title>
+    <title>BrainForge</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="../css/styles_menu.css" rel="stylesheet" type="text/css">
 </head>
