--- a/pages/focus.html
+++ b/pages/focus.html
@@ -76,7 +76,7 @@
 <!--    </div>-->
     <div class="task_rect">
         <div class="left_side">
-            <h1 style="margin-top:5px; margin-left: -300px">Focus tasks 👉🎯</h1>
+            <h1 style="margin-top:5px; margin-left: -300px; color: #00aaff">Focus tasks 👉🎯</h1>
             <div class="task_info">
                 <a>You are given a piece of code with errors. The type of task determines the context (arrays, loops, functions), and the level of difficulty affects the number and visibility of errors: the more difficult the task, the more errors there are and the less obvious they are.
                     Your task is to find and correct all errors. Such tasks help develop focus, logic, and critical thinking.
