--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -21,7 +21,7 @@
             <a href="../index.html">Log out</a>
         </div>
     </div>
-    <h1 class="main_text">BrainForge - train your intellect</h1>
+    <h1 class="main_text" style="color: #00aaff">BrainForge - train your intellect</h1>
 <div class="wrapper">
     <div class="menu_rect" id="profile">
         <img src="../images/technical-support.png" class="menu_icon" alt="profile">
@@ -30,7 +30,7 @@
     </div>
     <div class="menu_rect" id="practice">
         <img src="../images/coding(1).png" class="menu_icon" alt="practice">
-        <h2>Practice tasks</h2>
+        <h2 style="margin-left: 30px">Practice tasks</h2>
         <h3>Hone your skills every day.</h3>
     </div>
     <div class="menu_rect" id="focus">
@@ -38,11 +38,6 @@
         <h2>Focus tasks</h2>
         <h3>Stay on track without distractions.</h3>
     </div>
-<!--    <div class="menu_rect" id="math">-->
-<!--        <img src="../images/calculating.png" class="menu_icon" alt="chat-bot">-->
-<!--        <h2>Math for programmers</h2>-->
-<!--        <h3>Understand math behind algorithms.</h3>-->
-<!--    </div>-->
     <div class="menu_rect" id="chat">
         <img src="../images/chatbot.png" class="menu_icon" alt="chat-bot">
         <h2>AI chat</h2>
