--- a/pages/practice.html
+++ b/pages/practice.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="right_side">
-            <h1 style="margin-left: -250px">Practice tasks 👉🧩</h1>
+            <h1 style="margin-left: -250px; color: #00aaff">Practice tasks 👉🧩</h1>
             <div class="task_info">
                 <a>    Develop a program in Python that works with
                     an array of integers. The program should read
