--- a/pages/task_pr.html
+++ b/pages/task_pr.html
@@ -24,8 +24,6 @@
     </div>
 </section>
 <div class="task-page">
-
-    <!-- LEFT: TASK DESCRIPTION -->
     <div class="task-card">
         <div class="ready-rect"><h2 style="margin-top: 7px">Task completed successfully ✓</h2></div>
         <h2>Practice – Python – Arrays – Task 1</h2>
@@ -93,8 +91,8 @@ else:
         <div class="output-box">
             <h3>Output</h3>
             <div class="output-content">
-                <div class="aaa"><a>Enter numbers separated by spaces: 4 7 9 2 10 3<br></br>
-                    Average of even numbers: 5.33</a></div>
+                <div class="aaa"><a>>> Enter numbers separated by spaces: 4 7 9 2 10 3<br>
+                    >> Average of even numbers: 5.33</a></div>
             </div>
         </div>
 
